tests/ui/did_you_mean/expect-instead-of-unwrap.rs
fn main() {
    Ok(42).unwrap("wow");
    //~^ ERROR this method takes 0 arguments but 1 argument was supplied
    Some(42).unwrap("wow");
    //~^ ERROR this method takes 0 arguments but 1 argument was supplied
}
